Implementação de todo estilo do site, utilizando CSS puro

--- a/index.html
+++ b/index.html
@@ -1,44 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Perfil</title>
-</head>
-<body>
-    <ul>
-        <li>
-           <a href="index.html"> Home </a>
-        </li>
-        <li>
-            <a href="contato.html"> Contato </a> 
-        </li>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <ul id="menu">
+      <li>
+        <a href="index.html"> Home </a>
+      </li>
+      <li>
+        <a href="contato.html"> Contato </a>
+      </li>
     </ul>
 
-    <h1>Sobre a Bruna</h1>
+    <h1 class="center">Sobre a Bruna</h1>
+    <div class="container">
+      <div class="p-30">
+        <p class="justify">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+          accusantium tempore exercitationem ad quas repudiandae ut tenetur
+          praesentium voluptates libero architecto esse voluptate eius
+          accusamus, neque id quidem doloribus? Magnam. Lorem, ipsum dolor sit
+          amet consectetur adipisicing elit. Incidunt adipisci in iste
+          perferendis! Maiores voluptate libero adipisci aspernatur repellendus
+          assumenda labore asperiores illo. Dicta eius quos animi est blanditiis
+          corporis!
+        </p>
+        <p class="justify">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit cumque
+          ex illum explicabo veniam? Provident quaerat dolorem voluptas.
+          Repudiandae eveniet eligendi tenetur tempora omnis voluptatum, vel quo
+          doloremque quae velit! Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Ut molestias quae praesentium veniam doloribus
+          suscipit perferendis quidem corporis recusandae possimus, quo nam
+          eligendi nesciunt dignissimos sit rerum itaque ab reprehenderit.
+        </p>
+      </div>
+      <div>
+        <img
+          class="br-50 wh-300 p-30"
+          src="assets/img/foto bruna.jpg"
+          alt="Foto do criador desse conteúdo"
+        />
+      </div>
+    </div>
 
-    <p>
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint accusantium tempore exercitationem ad quas repudiandae ut tenetur praesentium voluptates libero architecto esse voluptate eius accusamus, neque id quidem doloribus? Magnam.
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt adipisci in iste perferendis! Maiores voluptate libero adipisci aspernatur repellendus assumenda labore asperiores illo. Dicta eius quos animi est blanditiis corporis!
-    </p>
-    <p>
-     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit cumque ex illum explicabo veniam? Provident quaerat dolorem voluptas. Repudiandae eveniet eligendi tenetur tempora omnis voluptatum, vel quo doloremque quae velit!
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut molestias quae praesentium veniam doloribus suscipit perferendis quidem corporis recusandae possimus, quo nam eligendi nesciunt dignissimos sit rerum itaque ab reprehenderit.
-    </p>
+    <h2 class="center">Meu video predileto</h2>
 
-    <img src="assets/img/foto bruna.jpg" alt="Foto do criador desse conteúdo">
-
-    <h2>Meu video predileto</h2>
-
-    <iframe width="560"
-     height="315" 
-     src="https://www.youtube.com/embed/UIrf-plk1AA" 
-     title="YouTube video player"
-     frameborder="0" 
-     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-     allowfullscreen
-     ></iframe>
-
-</body>
+    <div class="container mb-50">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/UIrf-plk1AA"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+    <hr />
+    <footer>
+      <div class="container">
+        <a href="https://www.facebook.com/brunaguimaraesb/" target="_blank">
+          <img
+            class="tm-social"
+            src="assets/img/facebook.png"
+            alt="Logo do Faceboook"
+          />
+        </a>
+        <a href="https://www.instagram.com/brunaguimaraesb/" target="_blank">
+          <img
+            class="tm-social"
+            src="assets/img/instagram.png"
+            alt="Logo do Instagram"
+          />
+        </a>
+        <a href="https://api.whatsapp.com/send?phone=5581998746283" target="_blank">
+          <img
+            class="tm-social"
+            src="assets/img/whatsapp.png"
+            alt="Logo do WhatsApp"
+          />
+        </a>
+        <a href="www.linkedin.com/in/brunaguimaraesb" target="_blank">
+          <img
+            class="tm-social"
+            src="assets/img/linkedin.png"
+            alt="Logo do Linkedin"
+          />
+        </a>
+        <a href="https://github.com/Brunaguimaraesb" target="_blank">
+          <img
+            class="tm-social"
+            src="assets/img/github.png"
+            alt="Logo do Github"
+          />
+        </a>
+      </div>
+      <p class="center">Todos os direitos reservados: Bruna Guimarães &copy</p>
+    </footer>
+  </body>
 </html>
