--- a/contato.html
+++ b/contato.html
@@ -1,42 +1,92 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contato</title>
-</head>
-<body>
-    <ul>
-        <li>
-           <a href="index.html"> Home </a>
-        </li>
-        <li>
-            <a href="contato.html"> Contato </a> 
-        </li>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <ul id="menu">
+      <li>
+        <a href="index.html"> Home </a>
+      </li>
+      <li>
+        <a href="contato.html"> Contato </a>
+      </li>
     </ul>
-    <h1>Entre em contato comigo</h1>
 
-    <form>
-        <label for="nome">Nome:</label> <br>
-        <input type="text" id="nome">
-        <br>
-        <br>
-        <label for="email">E-mail:</label> <br>
-        <input type="text" id="email">
-        <br>
-        <br>
-        <label for="assunto">Assunto:</label> <br>
-        <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-        <br>
-        <br>
-        <button>Enviar</button>
-    </form>
-    <h2>Endereço:</h2>
+    <h1 class="center">Entre em contato comigo</h1>
 
-    <p>Av. Boa Viagem, 4520, Boa Viagem</p>
-    <p>Recife - PE</p>
+    <div class="container p-30 mb-50">
+        <div>
+            <form>
+                <label for="nome">Nome:</label> <br />
+                <input type="text" id="nome" />
+                <br />
+                <br />
+                <label for="email">E-mail:</label> <br />
+                <input type="text" id="email" />
+                <br />
+                <br />
+                <label for="assunto">Assunto:</label> <br />
+                <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+                <br />
+                <br />
+                <button>Enviar</button>
+              </form>
+        </div> 
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.7301814652055!2d-34.90078728584162!3d-8.128928883621883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1fa6852acb15%3A0x8a102505f1efbe18!2sCondom%C3%ADnio%20do%20Edif%C3%ADcio%20Castelinho%20-%20Av.%20Boa%20Viagem%2C%204520%20-%20Boa%20Viagem%2C%20Recife%20-%20PE%2C%2051021-000!5e0!3m2!1spt-BR!2sbr!4v1637691776195!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</body>
+        <div class="ml-50">
+            <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.212472629563!2d-34.94183828522002!3d-8.079800594182789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1ea54b4eca69%3A0xde0df7a46d51d1ac!2sR.%20Aguanil%2C%20221%20-%20Jardim%20S%C3%A3o%20Paulo%2C%20Recife%20-%20PE%2C%2050910-400!5e0!3m2!1spt-BR!2sbr!4v1637858075429!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"></i>
+            ></iframe>
+        </div>
+    </div>
+
+    <hr />
+
+    <footer>
+          <div class="container "">
+            <a href="https://www.facebook.com/brunaguimaraesb/" target="_blank">
+              <img
+                class="tm-social"
+                src="assets/img/facebook.png"
+                alt="Logo do Faceboook"
+              />
+            </a>
+            <a href="https://www.instagram.com/brunaguimaraesb/" target="_blank">
+              <img
+                class="tm-social"
+                src="assets/img/instagram.png"
+                alt="Logo do Instagram"
+              />
+            </a>
+            <a href="https://api.whatsapp.com/send?phone=5581998746283" target="_blank">
+              <img
+                class="tm-social"
+                src="assets/img/whatsapp.png"
+                alt="Logo do WhatsApp"
+              />
+            </a>
+            <a href="www.linkedin.com/in/brunaguimaraesb" target="_blank">
+              <img
+                class="tm-social"
+                src="assets/img/linkedin.png"
+                alt="Logo do Linkedin"
+              />
+            </a>
+            <a href="https://github.com/Brunaguimaraesb" target="_blank">
+              <img
+                class="tm-social"
+                src="assets/img/github.png"
+                alt="Logo do Github"
+              />
+            </a>
+          </div>
+          <p class="center">Todos os direitos reservados: Bruna Guimarães &copy</p>
+        </footer>
+    
+  </body>
 </html>
