--- a/contato.html
+++ b/contato.html
@@ -23,25 +23,25 @@
         <div>
             <form>
                 <label for="nome">Nome:</label> <br />
-                <input type="text" id="nome" />
-                <br />
+                <input type="text" id="nome" onkeyup="validaNome()"/>
+                <div id = "txtNome"></div>
                 <br />
                 <label for="email">E-mail:</label> <br />
-                <input type="text" id="email" />
-                <br />
+                <input type="text" id="email" onkeyup='validaEmail()' />
+                <div id = "txtEmail"></div>
                 <br />
                 <label for="assunto">Assunto:</label> <br />
-                <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+                <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup="validaAssunto()"></textarea>
+                <div id = "txtAssunto"></div>
                 <br />
-                <br />
-                <button>Enviar</button>
+                <br>
+                <button onclick="enviar()">Enviar</button>
               </form>
         </div> 
 
         <div class="ml-50">
             <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.212472629563!2d-34.94183828522002!3d-8.079800594182789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1ea54b4eca69%3A0xde0df7a46d51d1ac!2sR.%20Aguanil%2C%20221%20-%20Jardim%20S%C3%A3o%20Paulo%2C%20Recife%20-%20PE%2C%2050910-400!5e0!3m2!1spt-BR!2sbr!4v1637858075429!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"></i>
-            ></iframe>
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.212472629563!2d-34.94183828522002!3d-8.079800594182789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1ea54b4eca69%3A0xde0df7a46d51d1ac!2sR.%20Aguanil%2C%20221%20-%20Jardim%20S%C3%A3o%20Paulo%2C%20Recife%20-%20PE%2C%2050910-400!5e0!3m2!1spt-BR!2sbr!4v1637858075429!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" onmousemove="mapaZoom()" onmouseout='mapaNormal()' id=mapa></iframe>
         </div>
     </div>
 
@@ -88,5 +88,7 @@
           <p class="center">Todos os direitos reservados: Bruna Guimarães &copy</p>
         </footer>
     
+  <script src="assets/js/script.js"></script>
+
   </body>
 </html>
