--- a/index.html
+++ b/index.html
@@ -103,5 +103,8 @@
       </div>
       <p class="center">Todos os direitos reservados: Bruna Guimarães &copy</p>
     </footer>
+
+    <script src="assets/js/script.js"></script>
+
   </body>
 </html>
