Update HTML, CSS AND JS

--- a/contato.html
+++ b/contato.html
@@ -40,8 +40,7 @@
         </div> 
 
         <div class="ml-50">
-            <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.212472629563!2d-34.94183828522002!3d-8.079800594182789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1ea54b4eca69%3A0xde0df7a46d51d1ac!2sR.%20Aguanil%2C%20221%20-%20Jardim%20S%C3%A3o%20Paulo%2C%20Recife%20-%20PE%2C%2050910-400!5e0!3m2!1spt-BR!2sbr!4v1637858075429!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" onmousemove="mapaZoom()" onmouseout='mapaNormal()' id=mapa></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d252837.3398751885!2d-35.07793817718457!3d-8.041809846692827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab196f88c446e5%3A0x3c9ef52922447fd4!2sRecife%20-%20PE!5e0!3m2!1spt-BR!2sbr!4v1637889787646!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"onmousemove="mapaZoom()" onmouseout='mapaNormal()' id=mapa></iframe>
         </div>
     </div>
 
@@ -63,12 +62,6 @@
                 alt="Logo do Instagram"
               />
             </a>
-            <a href="https://api.whatsapp.com/send?phone=5581998746283" target="_blank">
-              <img
-                class="tm-social"
-                src="assets/img/whatsapp.png"
-                alt="Logo do WhatsApp"
-              />
             </a>
             <a href="www.linkedin.com/in/brunaguimaraesb" target="_blank">
               <img
