--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <ul id="menu">
+    <div class="fundo">
+    <ul class="menu">
       <li>
         <a href="index.html"> Home </a>
       </li>
@@ -103,8 +104,9 @@
       </div>
       <p class="center">Todos os direitos reservados: Bruna Guimarães &copy</p>
     </footer>
+  </div>
 
     <script src="assets/js/script.js"></script>
-
+  
   </body>
 </html>
